--- a/app/src/main/res/layout/activity_reto_fotografia.xml
+++ b/app/src/main/res/layout/activity_reto_fotografia.xml
@@ -95,6 +95,7 @@
                 android:layout_marginBottom="256dp"
                 android:layout_marginTop="10dp"
                 android:textSize="15dp"
+                android:fontFamily="@font/carnasbold"
                 android:textAllCaps="false"
                 android:text="¡enviar!"
                 android:background="@drawable/rounded_cornersscharff"
