--- a/app/src/main/res/layout/fragment_salir.xml
+++ b/app/src/main/res/layout/fragment_salir.xml
@@ -35,9 +35,9 @@
 
         <ImageView
             android:id="@+id/imgcolaborador"
-            android:layout_width="190dp"
-            android:layout_height="161dp"
-            android:background="@drawable/fotoperfil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/avatarfina"
             android:layout_centerHorizontal="true"></ImageView>
 
 
@@ -115,7 +115,7 @@
             android:layout_marginLeft="30dp"
             android:fontFamily="@font/carnasbold"
             android:paddingEnd="10dp"
-            android:text="07 de 15"
+            android:text="01 de 15"
             android:textColor="@color/black"
             android:textSize="26dp"
 
