--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -21,14 +21,25 @@
             android:src="@drawable/titu2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"/>
 
-        </ImageView>
+        <TextView
+            android:id="@+id/letras"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/rknletras"
+            android:textColor="@color/black"
+            android:fontFamily="@font/carnasthin"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:textSize="16dp"
+            />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerranking"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="50dp"
